Added finally version for header component in lab 3

--- a/Lab2/pages/home/home.html
+++ b/Lab2/pages/home/home.html
@@ -17,20 +17,14 @@
       <ul>
         <li>Протизапальні рослини</li>
         <li>
-            <ol>
-                <li>
-                    Листя берези
-                </li>
-                <li>
-                    <a href="../cropuva/cropuva.html">Кропива</a>
-                </li>
-                <li>
-                    Липа
-                </li>
-                <li>
-                    Чорна смородина
-                </li>
-            </ol>
+          <ol>
+            <li>Листя берези</li>
+            <li>
+              <a href="../cropuva/cropuva.html">Кропива</a>
+            </li>
+            <li>Липа</li>
+            <li>Чорна смородина</li>
+          </ol>
         </li>
         <li>Противірусні рослини</li>
         <li>Протигрибкові рослини</li>
