--- a/Lab2/pages/cropuva/cropuva.html
+++ b/Lab2/pages/cropuva/cropuva.html
@@ -9,11 +9,11 @@
 <body>
     <div>
         <a href="../home/home.html">На головну</a>
-        <a name="point"></a>
+        <a id="point"></a>
     </div>
     <div>
         <p class="firstParagraph">
-            <a href="../bigImage/bigImage.html"><img src="../../assets/cropuva1.jpg" class="imgLeft"></a>
+            <a href="../bigImage/bigImage.html"><img src="../../assets/cropuva1.jpg" alt="cropbva1" class="imgLeft"></a>
             Кропива (лат. Urtica dioica) - багаторічна рослина, відома своїми
             <br> протизапальними, діуретичними та імуномодулюючими властивостями.
             <br> Вона здатна позбавляти організм від токсинів і сприяє виділенню сечі,
@@ -22,7 +22,7 @@
             <br> таких як флавоноїди, фенольні кислоти, селен і вітамін С.
         </p>
         <p class="secondParagraph">
-            <img src="../../assets/cropuva2.jpg" class="imgRight">
+            <img src="../../assets/cropuva2.jpg" alt="cropbva2" class="imgRight">
             Кропиву використовують в медицині для лікування захворювань сечовивідних шляхів,
             <br> запалення слизових оболонок травного тракту та анемії. 
             <br> Вона також може бути використана для зовнішнього вживання,
