--- a/Lab3/pages/aboutUs/aboutUs.html
+++ b/Lab3/pages/aboutUs/aboutUs.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aboutUs.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="aboutUs.css" />
     <title>Lab 3</title>
-</head>
-<body>
-    <div>
-        <script src="../../components/header/innerHeader.js"></script>
-    </div>
-    <div>
-        Hi
-    </div>
-</body>
+  </head>
+  <body>
+    <body>
+      <div id="header-container"></div>
+      <div>
+        <h1>Hello</h1>
+      </div>
+      <div id="footer-container"></div>
+
+      <script src="../../utils/loadHeaderAndFooter.js"></script>
+    </body>
+  </body>
 </html>
