Added dopInfo, header and fonts

--- a/Lab3/pages/main/main.html
+++ b/Lab3/pages/main/main.html
@@ -7,12 +7,74 @@
     <title>Lab 3</title>
   </head>
   <body>
-    <div id="header-container"></div>
-    <div>
+    <div class="mainHeader">
+      <div class="labelBlock">
+        <img class="label" src="../../assets/images/materialise-logo.svg" />
+      </div>
+      <div class="menu">
+        <span class="menuElement"><a href="#about">About Company</a></span>
+        <span class="menuElement"><a href="#products">Products</a></span>
+        <span class="menuElement"><a href="#contacts">Contacts</a></span>
+        <span class="menuElement"><a href="#history">History</a></span>
+      </div>
+    </div>
+    <div class="dopInfo">
+      <p class="titleText">Why join the Materialise team?</p>
+      <p class="mainDopText">
+        Meaningful innovation, result-driven co-creation, transparent integrity,
+        passionate people, and sustainable quality are ingrained in our daily
+        work at Materialise. Join like-minded people for a career where you can
+        feel the difference you’re making.
+      </p>
+      <div class="sentence">
+        <img
+          class="avatar"
+          src="../../assets/images/si-fried-vancraen-ceo-founder-materialise.webp"
+          alt=""
+        />
+        <p>
+          “For me, the dynamic atmosphere, the exciting sector, and the
+          professional challenges really make Materialise a fun place to work.
+          People’s passion and expertise are admirable and create a great
+          atmosphere. If you’re a game-changer, it’s an inspiring place to work.
+          As a team, we lead innovation in a very interesting and challenging
+          industry. And with the right proactive attitude, you can take the
+          opportunity to grow and determine your own professional path.
+        </p>
+      </div>
+      <div class="buttonContainer">
+        <button class="searchButton" type="button">Search and apply</button>
+      </div>
+    </div>
+    <div class="mainContainer">
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
       <h1>Hello</h1>
     </div>
-    <div id="footer-container"></div>
-
-    <script src="../../utils/loadHeaderAndFooter.js"></script>
+    <div class="mainFooter">
+      <div class="iconsBox">
+        <img src="../../assets/images/icon-facebook-white.svg" />
+        <img src="../../assets/images/icon-instagram-white.svg" />
+        <img src="../../assets/images/icon-linkedin-white.svg" />
+        <img src="../../assets/images/icon-youtube-white.svg" />
+      </div>
+      <div class="footerNaming">
+        <p class="mainFooterText">© Copyright Materialise 2023</p>
+      </div>
+    </div>
   </body>
 </html>
