added main functionakl for lab 3

--- a/Lab3/pages/main/main.html
+++ b/Lab3/pages/main/main.html
@@ -47,23 +47,248 @@
       </div>
     </div>
     <div class="mainContainer">
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
-      <h1>Hello</h1>
+      <div class="news">
+        <p class="newsTtile">Make a Difference</p>
+        <p class="newsTitleInfo">
+          We empower your sustainable 3D printing applications
+        </p>
+        <p class="mainNewxText">
+          Secure your place as a leader in your industry using pioneering
+          solutions for flexible industrial manufacturing and mass
+          personalization in healthcare. We develop our products and services
+          based on decades of experience in additive technologies to support
+          your projects. Let’s innovate together for a better and healthier
+          world.
+        </p>
+        <div class="newsBlock">
+          <p class="newsTitle">News</p>
+          <p class="newsTitleInfo">
+            Stay up to date with Materialise press releases, company highlights,
+            product updates, and financial news.
+          </p>
+          <div class="newsElement"></div>
+          <div class="newsElement"></div>
+          <a id="about"></a>
+          <div class="newsElement"></div>
+        </div>
+      </div>
+      <div class="aboutCompany">
+        <p class="aboutTitle">About Materialise</p>
+        <p class="aboutCompanyTitleInfo">
+          Better. Healthier. Together we can create a world driven by
+          innovation.
+        </p>
+        <p class="aboutCompanyText">
+          When 3D printing technology meets the right application, it has the
+          potential to bring significant value. Add the right partner, and it
+          can transform entire industries. Together we can go further.
+        </p>
+        <div>
+          <div class="iconsContainer">
+            <div class="iconElementLeft">
+              <img src="../../assets/images/about/icon-employees.svg" alt="" />
+              <p style="margin: 0; font-size: 24px; font-weight: bold">
+                2,400+
+              </p>
+              <p style="margin: 0">employess</p>
+            </div>
+            <div class="iconElementRight">
+              <img
+                src="../../assets/images/about/icon-doversity-inclusion-equality.svg"
+                alt=""
+              />
+              <p style="margin: 0; font-size: 24px; font-weight: bold">55+</p>
+              <p style="margin: 0">different nationalities</p>
+            </div>
+          </div>
+          <div class="iconsContainer">
+            <div class="iconElementLeft">
+              <img
+                src="../../assets/images/about/icon-globe-detailed.svg"
+                alt=""
+              />
+              <p style="margin: 0; font-size: 24px; font-weight: bold">55+</p>
+              <p style="margin: 0">countries we’re active in</p>
+            </div>
+            <div class="iconElementRight">
+              <img src="../../assets/images/about/icon-money-euro.svg" alt="" />
+              <p style="margin: 0; font-size: 24px; font-weight: bold">232M</p>
+              <p style="margin: 0">EUR annual revenue</p>
+            </div>
+          </div>
+          <div class="iconsContainer">
+            <div class="iconElementLeft">
+              <img src="../../assets/images/about/icon-patent.svg" alt="" />
+              <p style="margin: 0; font-size: 24px; font-weight: bold">485+</p>
+              <p style="margin: 0">patents granted</p>
+            </div>
+            <a id="products"></a>
+            <div class="iconElementRight">
+              <img src="../../assets/images/about/icon-3d-printer.svg" alt="" />
+              <p style="margin: 0; font-size: 24px; font-weight: bold">2.2M+</p>
+              <p style="margin: 0">parts printed in 2022</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="products">
+        <p class="productTitle">Software</p>
+        <p class="productTitleInfo">Supporting your 3D printing business</p>
+        <p class="productText">
+          Trust in a platform of software tools that manage and control the 3D
+          printing process more efficiently, allowing you to meet the highest
+          standards of the most demanding industries. We provide you with a
+          solid foundation to expand and realize your full potential.
+        </p>
+        <div class="productElements">
+          <div class="productElementR">
+            <img
+              src="../../assets/images/products/image.webp"
+              alt=""
+              style="width: 340px; float: left; margin-right: 10px"
+            />
+            <p>
+              You need a software platform to manage orders, automate laborious
+              tasks, and scale your operations. Magics 3D Print Suite can handle
+              all your needs, no matter the 3D printing technologies or machines
+              you use.
+            </p>
+          </div>
+          <div class="productElementR" style="margin-top: 80px">
+            <img
+              src="../../assets/images/products/image (1).webp"
+              alt=""
+              style="width: 340px; float: right; margin-right: 10px"
+            />
+            <a id="contacts"></a>
+            <p>
+              Unlock the potential of 3D printing for serial manufacturing.Our
+              CO-AM Software Platform provides you with the tools you need for
+              fully streamlined and scalable workflows.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="contacts">
+        <p class="contactTitle">Contacts</p>
+        <p class="contactText">
+          No matter what kind of support you need, our team is available to help
+          and answer your questions. Reach out to our customer support or sales
+          team for more information on our products and services
+        </p>
+        <p style="text-align: center; font-size: 36px; font-weight: bold">
+          How can we help you?
+        </p>
+        <div class="supportBlocks">
+          <div class="block" style="margin-left: 29px">
+            <p class="suportSecondtext" style="margin-left: 26px">
+              Customer support
+            </p>
+            <p style="margin-left: 26px; margin-right: 26px">
+              Get in touch with our experienced team, ready to help deliver your
+              projects
+            </p>
+          </div>
+          <div class="block" style="margin-left: 71px">
+            <p class="suportSecondtext" style="margin-left: 26px">Sales</p>
+            <p style="margin-left: 26px; margin-right: 26px">
+              Reach out to learn more about our various products and services.
+            </p>
+          </div>
+        </div>
+        <p class="suportSecondtext">Start your career at Materialise</p>
+        <div style="display: flex">
+          <img
+            src="../../assets/images/career/contact-icon-employee.webp"
+            alt=""
+            style="width: 210px; border-radius: 100px"
+          />
+          <div style="margin-left: 20px">
+            <p style="font-weight: bold; font-size: 24px">
+              Career opportunities
+            </p>
+            <p>
+              We are always looking for people who are passionate,
+              result-driven, and solution-minded. If that’s you, check out our
+              vacancies and find the perfect opportunity!
+            </p>
+          </div>
+        </div>
+        <div style="display: flex; margin-top: 15px">
+          <img
+            src="../../assets/images/about/icon-globe-detailed.svg"
+            alt=""
+            style="width: 210px; border-radius: 100px"
+          />
+          <div style="margin-left: 20px">
+            <p style="font-weight: bold; font-size: 24px">
+              Materialise around the world
+            </p>
+            <a id="history"></a>
+            <p>
+              Headquartered in Belgium and with more than 2,400 people, we
+              operate 31 offices in 21 countries worldwide.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="history">
+        <p class="hsitoryTitle">History</p>
+        <p class="hsitoryTitleInfo">Our journey of meaningful innovation</p>
+        <p class="historyText">
+          When Materialise was founded in 1990, our idea was radical. We’ve
+          remained at the forefront of 3D printing technology ever since,
+          empowering our customers to solve real-world challenges and innovate
+          the solutions of the future across a wide range of industries.
+        </p>
+        <p style="font-size: 36px; font-weight: bold; text-align: center">
+          Making a difference, together
+        </p>
+        <div style="display: flex">
+          <iframe
+            width="468"
+            height="263"
+            src="https://www.youtube.com/watch?v=cfd-1Q8Fi0M"
+          >
+          </iframe>
+          <div style="margin-left: 15px; margin-right: 15px">
+            <p>
+              Materialise was born from a desire to make a difference using 3D
+              printing — a desire that is refueled every day by our customers
+              around the world. Our shared passion for sustainable progress and
+              meaningful innovation drives us to push boundaries and set new
+              standards together.
+            </p>
+            <p>
+              Watch our video for highlights from our first 30 years of
+              supporting applications that bring added value to products,
+              people, and businesses.
+            </p>
+          </div>
+        </div>
+        <p style="text-align: center; font-size: 36px; font-weight: bold">
+          Our impact on your industry
+        </p>
+        <div style="display: flex">
+          <img
+            style="width: 301px"
+            src="../../assets/images/si-fried-vancraen-ceo-founder-materialise.webp"
+            alt=""
+          />
+          <div>
+            <p style="font-size: 28px">
+              Founder & CEO Fried Vancraen shares the story of Materialise
+            </p>
+            <p style="font-size: 28px; font-weight: bold">
+              <a
+                href="https://www.youtube.com/watch?v=ZiJBpr41q2k"
+                target="_blank"
+                >Go to video</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="mainFooter">
       <div class="iconsBox">
@@ -76,5 +301,7 @@
         <p class="mainFooterText">© Copyright Materialise 2023</p>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
