--- a/Lab3/pages/main/main.html
+++ b/Lab3/pages/main/main.html
@@ -290,7 +290,7 @@
         </div>
       </div>
     </div>
-    <div class="mainFooter">
+    <div class="mainFooter" id="footer">
       <div class="iconsBox">
         <img src="../../assets/images/icon-facebook-white.svg" />
         <img src="../../assets/images/icon-instagram-white.svg" />
